--- a/Day/Day 10/traversing dom/index.html
+++ b/Day/Day 10/traversing dom/index.html
@@ -6,7 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Dom mutiple element</h1>
+    <h1>traversing dom</h1>
+    <div>
+        <ul>
+            <li>child 1</li>
+            <li>child 2</li>
+            <li>child 3</li>
+        </ul>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
