--- a/Day/Day 10/single element/index.html
+++ b/Day/Day 10/single element/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Dom single element</h1>
+    <script src="script.js"></script>
 </body>
 </html>
